--- a/style.css
+++ b/style.css
@@ -17,11 +17,29 @@
     width: 90%;
     height:85%;
     padding: 20px;
+    
    
+}
+.first-inner-section{
+    display: flex;
+    justify-content: space-between;
+}
+.bmi-result{
+    /* background-color: black; */
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 30%;
+    height: 150px;
+    align-self: center;
+    padding: 10px;
+}
+.bmi-result img{
+    width: 100%;
+    height: 100%;
 }
 .bmi-input{
 border: 1px solid gold;
-width: 50%;
+width: 100%;
 height: 45px;
 padding: 10px;
 margin-bottom: 20px;
@@ -38,4 +56,24 @@ margin-top: 10px;
 .input-area{
     display: flex;
     flex-direction: column;
+    width: 50%;
+}
+#calculate-bmi{
+    width: 100px;
+    height: 40px;
+    cursor: pointer;
+    outline: none;
+    border: 1px solid black;
+    background-color: black;
+    border-radius: 4px;
+    font: bold;
+    color: gold;
+}
+#calculate-bmi:hover{
+    background-color: gold;
+    color: black;
+    outline: none;
+}
+#calculate-bmi:focus{
+    outline: none;
 }
