--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 .first-inner-section{
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid black;
+    padding-bottom: 30px;
 }
 .bmi-result{
     /* background-color: black; */
@@ -30,8 +32,9 @@
     border-radius: 10px;
     width: 30%;
     height: 150px;
-    align-self: center;
+    /* align-self: center; */
     padding: 10px;
+    box-shadow: 5px 10px ;
 }
 .bmi-result img{
     width: 100%;
