--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .bmi-section{
     background-color: black;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -23,7 +23,8 @@
 .first-inner-section{
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
+    
     padding-bottom: 30px;
 }
 .bmi-result{
@@ -37,6 +38,8 @@
     justify-content: center;
     align-items: center;
     line-height: 50px;
+    margin-right: 5rem;
+    margin-top: 10px;
    
     /* align-self: center; */
     padding: 10px;
@@ -49,7 +52,7 @@
 .bmi-input{
 border: 1px solid gold;
 width: 100%;
-height: 45px;
+height: 35px;
 padding: 10px;
 margin-bottom: 20px;
 margin-top: 10px;
@@ -87,3 +90,73 @@ margin-top: 10px;
     outline: none;
 }
 #reset-bmi{display: none;}
+.bmi-divider{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.round-shape{
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    background-color: black;
+}
+.line{
+    border: 1px solid gold;
+    width: 90%;
+    height: 0px;
+}
+.input-warning{
+border: 1px solid gold;
+background-color: black;
+width: 200px;
+height: 90px;
+border-radius: 6px;
+align-self: center;
+margin: 0 auto;
+color: gold;
+padding: 10px;
+display: none;
+flex-direction: column;
+}
+.input-warning-cancel{
+    align-self: flex-end;
+    cursor: pointer;
+    font-size: 20px;
+    color: black;
+    width: 30px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid gold;
+    background-color: gold;
+}
+.input-warning-cancel:hover{
+    color: white;
+    background-color: goldenrod;
+}
+.second-inner-section{
+    padding-top: 30px;
+}
+.weight-conversion-inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.weight-conversion-inner-unit{
+    width: 40%;
+    
+}
+.weight-conversion-inner-unit input{
+   width: 100%;
+}
+.bmi-section h2{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.bmi-section h3{
+    
+    margin-bottom: 10px;
+}
