worked on height conversion

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .bmi-section-inner{
     /* border: 1px solid;
     border-color: gold; */
+    margin-top: 30px;
     background-color: white;
     width: 90%;
     height:85%;
