--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.70), rgba(4, 9, 30, 0.70)), url(./BMI\ 3.jpg);
+    background-image: linear-gradient(rgba(0, 9, 0, 0.70), rgba(0, 9, 0, 0.70)), url(./BMI\ 3.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
-.header img{
-    width: 180px;
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2% 6%;
+}
+.header h1{
+    color: #fff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
 }
