another commit on styling

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 /* Style for Homepage */
 .container{
     width: 100%;
-    min-height: 100vh;
+    min-height: 80vh;
     background-image: linear-gradient(rgba(0, 9, 0, 0.70), rgba(0, 9, 0, 0.70)), url(./BMI\ 3.jpg);
     background-position: center;
     background-size: cover;
@@ -21,4 +21,43 @@
     color: #fff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
+    font-size: 2rem;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+nav ul li a{
+    font-size: 0.95rem;
+    color: #fff;
+    text-decoration: none;
+}
+.content{
+    width: 80%;
+    color: white;
+    text-align: right;
+    position: absolute;
+    right: 6%;
+    top: 38%;
+}
+.content p{
+    font-size: 1.1rem;
+}
+.con-btn{
+    text-decoration: none;
+    border: 2px solid #334d4d;
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    border-radius: 20px;
+    background-color: #334d4d;
+    color: whitesmoke;
+    font-size: ;
+
 }
