changes to background

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     min-height: 80vh;
-    background-image: linear-gradient(rgba(0, 9, 0, 0.70), rgba(0, 9, 0, 0.70)), url(./BMI\ 3.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.70), rgba(4, 9, 30, 0.70)), url(./BMI\ 3.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -39,12 +39,13 @@ nav ul li a{
     text-decoration: none;
 }
 .content{
-    width: 80%;
+    width: 90%;
     color: white;
-    text-align: right;
+    text-align: center;
     position: absolute;
-    right: 6%;
-    top: 38%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 .content p{
     font-size: 1.1rem;
