--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ nav ul li a{
     border-radius: 20px;
     background-color: #334d4d;
     color: whitesmoke;
-    font-size: ;
+    cursor: pointer;
 
+}
+.con-btn:hover{
+    border: 1px solid #fff;
+    background: transparent;
+    transition: 1s;
+    color: #ccc;
 }
