--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     margin: 0px;
     box-sizing: border-box;
 }
+/* BMI CALCULATION STARTS*/
 .bmi-section{
-    background-color: black;
+    background-color: #669999;
     /* height: 100vh; */
     display: flex;
     flex-direction: row;
@@ -13,7 +14,7 @@
 .bmi-section-inner{
     /* border: 1px solid;
     border-color: gold; */
-    margin-top: 30px;
+    margin: 30px 0px;
     background-color: white;
     width: 90%;
     height:85%;
@@ -51,7 +52,7 @@
     height: 100%;
 }
 .bmi-input{
-border: 1px solid gold;
+border: 1px solid #669999;
 width: 100%;
 height: 35px;
 padding: 10px;
@@ -59,11 +60,11 @@ margin-bottom: 20px;
 margin-top: 10px;
 }
 .bmi-input:focus{
-    border: 1px solid gold;
+    border: 1px solid #669999;
     outline: none;
 }
 .bmi-input:hover{
-    border: 2px solid gold;
+    border: 2px solid #669999;
     outline: none;
 }
 .input-area{
@@ -76,16 +77,17 @@ margin-top: 10px;
     height: 40px;
     cursor: pointer;
     outline: none;
-    border: 1px solid black;
+    border: 2px solid #669999;
     background-color: black;
     border-radius: 4px;
     font: bold;
-    color: gold;
+    color: white;
 }
 .input-area button:hover{
-    background-color: gold;
+    background-color: #669999;
     color: black;
     outline: none;
+    border: 1px solid black;
 }
 .input-area button:focus{
     outline: none;
@@ -103,39 +105,41 @@ margin-top: 10px;
     background-color: black;
 }
 .line{
-    border: 1px solid gold;
+    border: 1px solid #669999;
     width: 90%;
     height: 0px;
 }
 .input-warning{
-border: 1px solid gold;
-background-color: black;
+border: 1px solid #669999;
+background-color: #669999;
 width: 200px;
 height: 90px;
 border-radius: 6px;
 align-self: center;
 margin: 0 auto;
-color: gold;
+color: black;
 padding: 10px;
 display: none;
 flex-direction: column;
+text-align: center;
+
 }
 .input-warning-cancel{
     align-self: flex-end;
     cursor: pointer;
-    font-size: 20px;
-    color: black;
+    font-size: 15px;
+    color: #669999;
     width: 30px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid gold;
-    background-color: gold;
+    height: 25px;
+    text-align: center;
+    border: 1px solid #669999;
+    background-color: black;
+    border-radius: 5px;
+    padding: 0;
 }
 .input-warning-cancel:hover{
     color: white;
-    background-color: goldenrod;
+    background-color: #334d4d;
 }
 .second-inner-section{
     padding-top: 30px;
@@ -161,3 +165,4 @@ flex-direction: column;
     
     margin-bottom: 10px;
 }
+/* BMI CALCULATION ENDS*/
