--- a/style.css
+++ b/style.css
@@ -117,21 +117,22 @@ margin-top: 10px;
     width: 90%;
     height: 0px;
 }
-.input-warning{
+.bmi-section .input-warning{
 border: 1px solid #669999;
-background-color: #669999;
+background-color: #334d4d;
 width: 200px;
 height: 90px;
 border-radius: 6px;
 align-self: center;
 margin: 0 auto;
-color: black;
+/* color: red; */
 padding: 10px;
 display: none;
 flex-direction: column;
 text-align: center;
 
 }
+
 .input-warning-cancel{
     align-self: flex-end;
     cursor: pointer;
@@ -140,8 +141,8 @@ text-align: center;
     width: 30px;
     height: 25px;
     text-align: center;
-    border: 1px solid #669999;
-    background-color: black;
+    border: 2px solid #669999;
+    background-color: white;
     border-radius: 5px;
     padding: 0;
 }
@@ -170,9 +171,12 @@ text-align: center;
     margin-bottom: 20px;
     color: #334d4d;
 }
-.bmi-section label,p{
+.bmi-section label,  .bmi-section p{
     
     color: #334d4d;
+}
+.input-warning p{
+    color: white;
 }
 .bmi-section h3{
     
@@ -186,7 +190,30 @@ text-align: center;
     width: 100%;
     height: 100%;
 }
+@media only screen and (max-width: 768px){
+    .weight-conversion-inner-unit{
+        width:100%;
+       
+        
+    }
+.weight-conversion-inner{
+    flex-direction: column;
+    }
+    .first-inner-section{
+        flex-direction: column;
+    }
+    .input-area{
+        width: 100%;
+    }
+    .bmi-result{
+        align-self: center;
+        margin-top: 30px;
+    }
+   
+}
 /* BMI CALCULATION ENDS*/
+
+
 /* Style for Homepage */
 .container{
     width: 100%;
