--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 /* BMI CALCULATION STARTS*/
 .bmi-section{
-    /* background-color: #669999; */
+    background-color: #334d4d;
     /* height: 100vh; */
     display: flex;
     flex-direction: row;
@@ -15,7 +15,7 @@
 .bmi-section-inner{
     /* border: 1px solid;
     border-color: gold; */
-    margin: 30px 0px;
+    margin: 50px 0px;
     background-color: white;
     width: 90%;
     height:85%;
@@ -301,8 +301,12 @@ nav ul li a{
 /* BMI Info */
 #bmi_contect{
    display: block;
+   /* display: flex; */
    justify-content: center;
+   /* justify-content: space-between; */
+   margin: 0 auto;
    margin-top: 50px;
+   width: 90%;
 }
 
 .bmi_header{
@@ -345,6 +349,7 @@ nav ul li a{
     padding-top: 10px;
     font-size: 20px;
     text-align: start;
+    text-align: justify;
     /* font-style: italic; */
     color: #999;
     bottom: 15px;
