--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 /* BMI CALCULATION STARTS*/
-.bmi-section{
+.newsletter{
+    height: 200px;
     background-color: #334d4d;
+}
+.bmi-section{
+    /* background-color: #c2d6d6; */
     /* height: 100vh; */
     display: flex;
     flex-direction: row;
@@ -171,6 +175,8 @@ text-align: center;
     text-align: center;
     margin-bottom: 20px;
     color: #334d4d;
+    font-size: 25px;
+    
 }
 .bmi-section label,  .bmi-section p{
     
@@ -444,7 +450,8 @@ nav ul li a{
 }
 /* Footer */
 footer{
-    margin-top: 195px;
+    /* margin-top: 195px; */
+    margin-top: 40px;
     width: 100%;
     padding: 100px 15%;
     background: #334d4d;
