--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ text-align: center;
     font-weight: bold;
     font-size: 2rem;
 }
+/* Nav Bar */
 nav{
     flex: 1;
     text-align: right;
@@ -317,6 +318,19 @@ nav ul li a{
     color: #fff;
     text-decoration: none;
 }
+nav ul li::after{
+    content: '';
+    width: 0;
+    height: 2px;
+    background: #ffffff;
+    display: block;
+    margin: auto;
+    transition: 0.5;
+}
+nav ul li:hover::after{
+    width: 100%;
+}
+/* Style for header content */
 .content{
     width: 90%;
     color: white;
@@ -347,16 +361,28 @@ nav ul li a{
     transition: 1s;
     color: #ccc;
 }
-
-
-/* Nav Bar */
-
-
-
-
-
-
-
+/* Responsiveness for homepage */
+@media (max-width:700px) {
+    nav ul li{
+        display: block;
+    }
+    nav{
+        text-align: left;
+        flex: none;
+        background: #334d4d;
+        width: 120px;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    nav ul{
+        padding: 10px;
+    }
+    .header h1{
+        font-size: 2.5rem;
+        margin-top: 30px;
+    }
+}
 
 /* BMI Info */
 #bmi_contect{
