completed work on the newsletter section

--- a/style.css
+++ b/style.css
@@ -6,26 +6,68 @@
 /* NEWSLETTER STARTS*/
 
 .newsletter{
-    height: 200px;
     background-color: #334d4d;
-    margin: 0 auto;
+    margin: 0px auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 .newsletter-inner{
-    width: 80%;
+    width: 50%;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    
+}
+.newsletter input{
+    padding: 10px;
+    width: 80%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #334d4d;
+}
+.newsletter input:focus{
+    outline: none;
+    border: 2px solid #669999;
+
+}
+.newsletter input:hover{
+    outline: none;
+    border: 2px solid #669999;
+}
+.newsletter button{
+    width: 120px;
+    border-radius: 16px;
+    height: 40px;
+    margin:30px 0px;
+    cursor: pointer;
+    border: 1px solid #334d4d;
+    background-color: white;
+}
+.newsletter button:hover{
+    background-color: #669999;
+    width: 125px;
+    color: white;
 }
 .newsletter h2{
-    margin-bottom: 15px;
+    margin: 30px 0px;
     font-size: 40px;
+}
+
+@media only screen and (max-width: 1024px){
+    .newsletter-inner{
+        width: 60%;
+    }
+}
+@media only screen and (max-width: 768px){
+    .newsletter-inner{
+        width: 90%;
+    }
 }
 
 /* NEWSLETTER ENDS*/
@@ -38,23 +80,21 @@
     align-items: center;
 }
 .bmi-section-inner{
-    margin: 50px 0px;
+    margin: 40px 0px;
     background-color: white;
     width: 90%;
     height:85%;
     padding: 20px;
+    padding-top: 0;
     
    
 }
 .first-inner-section{
     display: flex;
     justify-content: space-between;
-    /* border-bottom: 1px solid black; */
-    
     padding-bottom: 30px;
 }
 .bmi-result{
-    /* background-color: black; */
     border: 1px solid #334d4d;
     border-radius: 10px;
     width: 30%;
@@ -147,7 +187,6 @@ height: 90px;
 border-radius: 6px;
 align-self: center;
 margin: 0 auto;
-/* color: red; */
 padding: 10px;
 display: none;
 flex-direction: column;
@@ -195,8 +234,7 @@ text-align: center;
     font-size: 25px;
     
 }
-.bmi-section label,  .bmi-section p{
-    
+.bmi-section label,  .bmi-section p{ 
     color: #334d4d;
 }
 .input-warning p{
@@ -216,8 +254,7 @@ text-align: center;
 }
 @media only screen and (max-width: 768px){
     .weight-conversion-inner-unit{
-        width:100%;
-       
+        width:100%;   
         
     }
 .weight-conversion-inner{
@@ -324,8 +361,7 @@ nav ul li a{
 /* BMI Info */
 #bmi_contect{
    display: block;
-   /* justify-content: center; */
-   justify-content: space-between;
+   justify-content: center;
    margin: 0 auto;
    margin-top: 50px;
    width: 90%;
@@ -369,9 +405,8 @@ nav ul li a{
     /* justify-content: center; */
     justify-content: space-between;
     margin: 50px 10px;
-    margin: 20px 10px;
+    margin: 40px 10px;
     
-    /* background-color: blue; */
 }
 
 .bmi_text{
@@ -459,16 +494,10 @@ nav ul li a{
     }
 
     .bmi_img img{
-        width: 400px !important;
+        /* width: 400px !important; */
         height: inherit;
     }
 
-    /* .bmi_img{
-        width: 100%;
-    }
-    .bmi_text{
-        width: 100%;
-    } */
 }
 
 @media screen and (max-width: 500px){
