--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ margin-top: 10px;
     cursor: pointer;
     outline: none;
     border: 2px solid #669999;
-    background-color: black;
+    background-color: #334d4d;
     border-radius: 4px;
     font: bold;
     color: white;
@@ -411,7 +411,7 @@ nav ul li:hover::after{
 }
 
 .text-decor span{
-    color: #D74826;
+    color: #334d4d;
 }
 
 .text-decor ::before{
@@ -422,7 +422,7 @@ nav ul li:hover::after{
     transform: translate(-50%);
     width: 45px;
     height: 4px;
-    background-color: #D74826;
+    background-color: #334d4d;
 }
 
 .bmi_section{
@@ -441,7 +441,7 @@ nav ul li:hover::after{
     text-align: start;
     text-align: justify;
     /* font-style: italic; */
-    color: #999;
+    color: #333;
     bottom: 15px;
     left: 15px;
     width: 48%;
