--- a/style.css
+++ b/style.css
@@ -330,6 +330,12 @@ nav ul li::after{
 nav ul li:hover::after{
     width: 100%;
 }
+.header .fa {
+    display: block;
+    color: #ffffff;
+    font-size: 22px;
+    cursor: pointer;
+}
 /* Style for header content */
 .content{
     width: 90%;
@@ -361,6 +367,7 @@ nav ul li:hover::after{
     transition: 1s;
     color: #ccc;
 }
+
 /* Responsiveness for homepage */
 @media (max-width:700px) {
     nav ul li{
@@ -382,6 +389,12 @@ nav ul li:hover::after{
         font-size: 2.5rem;
         margin-top: 30px;
     }
+    .header, nav .fa {
+        color: #ffffff;
+        font-size: 22px;
+        cursor: pointer;    
+    }
+    
 }
 
 /* BMI Info */
