--- a/style.css
+++ b/style.css
@@ -552,48 +552,47 @@ nav ul li a{
         height: inherit;
     }
 }
+
 /* Footer */
-.footer-outer{
+.footer-outer {
     width: 100%;
-   margin: 0 auto;
+    margin: 0 auto;
     background: #334d4d;
     color: #efefef;
     display: flex;
     justify-content: center;
 }
-footer{
-    /* margin-top: 195px; */
+
+footer {
     margin-top: 20px;
     padding: 50px 0;
     display: flex;
     width: 90%;
 }
 
-footer div{
+footer div {
     text-align: center;
+    flex: 2; 
+    padding: 0 20px; 
 }
 
-.col-2{
-    flex-grow: 2;
-    text-transform: uppercase;
-}
-
-.col-1 a{
+.col-1 a {
     display: block;
     text-decoration: none;
-    color:#efefef;
+    color: #efefef;
     margin-bottom: 20px;
 }
 
-footer div h3{
+footer div h3 {
     font-weight: 300;
-    margin-bottom:25px ;
+    margin-bottom: 25px;
     letter-spacing: 1px;
 }
 
-form input{
-    width: 400px;
-    height:40px;
+form input {
+    width: 100%; /* Make the input full-width */
+    max-width: 400px; /* Limit the maximum width */
+    height: 40px;
     border-radius: 10px;
     text-align: center;
     margin-top: 10px;
@@ -602,7 +601,7 @@ form input{
     border: none;
 }
 
-form button{
+form button {
     background: transparent;
     border: 2px solid #fff;
     color: #fff;
@@ -612,15 +611,39 @@ form button{
     cursor: pointer;
 }
 
-.social-icon{
+.social-icon {
     margin-top: 30px;
 }
 
-.social-icon i{
+.social-icon i {
     font-size: 22px;
     margin: 10px;
     cursor: pointer;
 }
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+    footer {
+        flex-direction: column; /* Stack columns vertically */
+        align-items: center; /* Center align content */
+    }
+    
+    footer div {
+        padding: 20px 0; /* Adjust spacing for smaller screens */
+    }
+
+    form input {
+        max-width: 100%; /* Allow input to take full width */
+    }
+
+    form button {
+        width: 100%; /* Make button full width */
+    }
+}
+
+/* Additional media queries for smaller screen sizes if needed */
+/* You can add more media queries as needed */
+
 @media screen and (max-width: 700px){
     .bmi_section{
         display: block;
